Closed Bug 264461 Opened 21 years ago Closed 21 years ago

Installer windows shuffle offscreen with each step when windows taskbar located at top or left of screen.

Categories

(SeaMonkey :: Installer, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: svl-bmo, Unassigned)

References

Details

(Keywords: regression)

Attachments

(2 files)

When installing mozilla using the windows installer, each new screen shown on screen is placed more and more to the left or top if the windows taskbar is placed on that edge of the screen. It's particularly noticeable with the taskbar located at the top of the screen, as in just ten next/back steps the window has moved completely offscreen (at 1400x1050). This regressed between 20040704-09 and 20040712-15. (I can't narrow it down further, as archive.mozilla.org doesn't have more windows builds between those dates.) The only relevant checkin during that period seems to be the fix for bug 47762 by Sean Su (although I have no idea about the code, so apologies for cc-ing you if you're not responsible) :)
This has been reported at least once already, please search and dup.
Whiteboard: DUPEME
Looking at all open installer bugs since early july, I now found the unconfirmed bug 256458 (which by all rights I should've found when searching before, don't know why I didn't), but nothing else. As it doesn't have the information on when it regressed, I'll dupe it to this one.
*** Bug 256458 has been marked as a duplicate of this bug. ***
Comment on attachment 163276 [details] [diff] [review] Patch I can probably get to this by next week sometime.
Comment on attachment 163276 [details] [diff] [review] Patch I'm trusting you on this one, but it looks correct.
Attachment #163276 - Flags: superreview?(dveditz)
Attachment #163276 - Flags: review?(bsmedberg)
Attachment #163276 - Flags: review+
Comment on attachment 163276 [details] [diff] [review] Patch sr=dveditz
Attachment #163276 - Flags: superreview?(dveditz) → superreview+
Thank you for review and superreview. Benjamin: Please check in tha patch.
Comment on attachment 163276 [details] [diff] [review] Patch I have no idea why nobody bothered to request approval for this one yet. It may be too late now, but let's at least try.
Attachment #163276 - Flags: approval-aviary?
Whiteboard: DUPEME
Alex: This bug is not reproduced with Firefox. And this patch is only for Mozilla App Suite.
Comment on attachment 163276 [details] [diff] [review] Patch canceling the approval request then. Why is anybody worrying about this bug these days, anyways? Even bugging bsmedberg for check-ins? Either wait a week, or get someone else to do it, please.
Attachment #163276 - Flags: approval-aviary?
Axel, because I'm an xpinstall peer and I reviewed the patch. Masayuki, I will try to remember to commit this when I have time after the Firefox 1.0 release.
QA Contact: bugzilla → bsmedberg
Jungshik: Would you check in the patch?
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: