bug 264461      Installer windows shuffle offscreen with each step when windows taskbar located at top or left of screen patch by masayuki@d-toybox.com (r=bsmedberg,sr=dveditz)